зміна дз після коменту ментора

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </ul>
       </section>
       <!--фото нашої команди-->
-      <section class="section">
+      <section class="section section-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li>
@@ -181,7 +181,7 @@
               href="https://goo.gl/maps/d1ww8oayHdAEZ6sH9"
               target="_blank"
               rel="noopener noreferrer"
-              class="text link"
+              class="text"
               >695 Park Ave, New York, NY 10065, United States</a
             >
           </li>
@@ -189,7 +189,7 @@
             <a href="mailto:info@example.com" class="link">info@example.com</a>
           </li>
           <li>
-            <a href="tel:+12127724150" class="link">+1 212-772-4150</a>
+            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
