--- a/portfolio.html
+++ b/portfolio.html
@@ -5,28 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/normalize.css" />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-
 
   <body>
     <!--шапка сайта-->
     <header class="page-header">
       <nav>
-        <a href="./index.html" class="link logo"><span class="web">Web</span>Studio </a>
+        <a href="./index.html" class="link logo"
+          ><span class="web">Web</span>Studio
+        </a>
         <ul class="list">
-          <li><a href="./index.html"  class="link nav-link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link nav-link current">Portfolio</a></li>
+          <li><a href="./index.html" class="link nav-link">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="link nav-link current"
+              >Portfolio</a
+            >
+          </li>
           <li><a href="" class="link nav-link">Contacts</a></li>
         </ul>
       </nav>
@@ -35,22 +46,40 @@
 
       <ul class="contact list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link contact-link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link contact-link"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
     <main>
       <section class="section">
-        <h1  class="visually-hidden">Portfolio</h1>
+        <h1 class="visually-hidden">Portfolio</h1>
         <ul class="list">
-          <li><button class="button filter-button current" type="button">All</button></li>
-          <li><button class="button filter-button" type="button">Web-site</button></li>
-          <li><button class="button filter-button" type="button">Apps</button></li>
-          <li><button class="button filter-button" type="button">Design</button></li>
-          <li><button class="button filter-button" type="button">Marketing</button></li>
+          <li>
+            <button class="button filter-button current" type="button">
+              All
+            </button>
+          </li>
+          <li>
+            <button class="button filter-button" type="button">Web-site</button>
+          </li>
+          <li>
+            <button class="button filter-button" type="button">Apps</button>
+          </li>
+          <li>
+            <button class="button filter-button" type="button">Design</button>
+          </li>
+          <li>
+            <button class="button filter-button" type="button">
+              Marketing
+            </button>
+          </li>
         </ul>
         <ul class="cards list">
           <li>
@@ -157,30 +186,38 @@
                 width="370"
                 height="294"
               />
-              <h2 class=" card-title">Growing Business</h2>
+              <h2 class="card-title">Growing Business</h2>
               <p class="card-text">Apps</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-  <footer class="footer">
-    <a href="./index.html" class="logo text"><span class="web">Web</span><span class="studio">Studio</span></a>
-  
-    <address class="adres">
-      <ul class="list">
-        <li>
-          <a href="https://goo.gl/maps/d1ww8oayHdAEZ6sH9" target="_blank" rel="noopener noreferrer" class="text link">695
-            Park Ave, New York, NY 10065, United States</a>
-        </li>
-        <li>
-          <a href="mailto:info@example.com" class="link">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+12127724150" class="link">+1 212-772-4150</a>
-        </li>
-      </ul>
-    </address>
-  </footer>
+    <footer class="footer">
+      <a href="./index.html" class="logo text"
+        ><span class="web">Web</span><span class="studio">Studio</span></a
+      >
+
+      <address class="adres">
+        <ul class="list">
+          <li>
+            <a
+              href="https://goo.gl/maps/d1ww8oayHdAEZ6sH9"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text"
+            >
+              695 Park Ave, New York, NY 10065, United States</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="link">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
